# qt-css-engine

./: .gitignore  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: pr-check.yml  publish.yml  test-publish.yml
demo/: layout_test.py  main.py  styles.css
qt_css_engine/: __init__.py  constants.py  css_parser.py  engine.py  gradients.py  handlers.py  types.py  utils.py
qt_css_engine/qt_compat/: QtCore.py  QtGui.py  QtWidgets.py  __init__.py  _api.py
tests/: conftest.py  test_anim.py  test_css_parser.py  test_engine_coverage.py  test_gradients.py  test_interactions.py  test_layouts.py  test_size_layout.py
